# expense-tracker-api

./: Cargo.toml  README.md
migrations/: 20250221000203_init.down.sql  20250221000203_init.up.sql
src/: config.rs  enums.rs  lib.rs  main.rs
src/category/: dto.rs  model.rs  repository.rs
src/expense/: dto.rs  mod.rs  model.rs  repository.rs
src/product/: dto.rs  mod.rs  model.rs  repository.rs
src/tests/: category.rs  expense.rs  mod.rs  product.rs
