[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"]}
dotenv = "0.15"
tokio = {version = "1.0", features = ["full"]}
heck = "0.5.0"
actix-cors = "0.7.0"
actix-web = "4.3.1"
actix-multipart = "0.4"
argon2 = "0.5.1"
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.11.6"
futures-util = "0.3.28"
jsonwebtoken = "9.2.0"
openssl-probe = "0.1.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
log = "0.4"
actix-http = "3.0"
mime = "0.3"
hex = "0.4"
regex = "1.5"
